# terra-peep721

./: .env.default  .env.defaults  .env.defaults.workflow  .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  init.json  init.sh  notes.txt  query_examples.sh  update.sh  xyz.sh
.cargo/: config
.github/workflows/: Basic.yml  release-artifacts.yml
artifacts/: checksums.txt  checksums_intermediate.txt  terra_peep721.wasm
examples/: schema.rs
schema/: all_nft_info_response.json  execute_msg.json  instantiate_msg.json  nft_info_response.json  query_msg.json
src/: contract.rs  contract_tests.rs  error.rs  execute.rs  extension.rs  lib.rs  msg.rs  query.rs  state.rs
