[package]
name = "terra-peep721"
version = "0.1.0"
authors = ["iholsman"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
  "artifacts/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

#[profile.release]
#opt-level = 3
#debug = false
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#panic = 'abort'
#incremental = false
#overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
#cw0 = { path =  "../cw-plus/packages/cw0", version = "0.10.0-soon3" }
cw0 = {  version = "0.10.0-soon3" }
cw2 = { version = "0.10.0-soon3" }
cw721 = {version = "0.10.0-soon3" }
cw721-base = { version = "0.10.0-soon3", features = ["library"] }
cw-storage-plus = { version = "0.10.0-soon3" }
cosmwasm-std = { version = "1.0.0-soon" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-soon" }
