[package]
name = "terra-peep721"
version = "0.4.9"
authors = ["PFC"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
  "artifacts/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]

cw0 =  "0.9.1"
cw2 =   "0.9.1"
# currently waiting on upstream to fix 0.9.3 so it can build on terra.
cw721 =  {version ="0.9.2"} #, git="https://github.com/CosmWasm/cw-nfts.git", tag="v0.9.3"}
getrandom = { version = "0.2", features = ["js"] }
cw-storage-plus = "0.9.1"
cosmwasm-std = "0.16.0"

cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde-json-wasm="0.3.1"
thiserror =  "1.0.23"
sha2 = "0.8.0"
base64="0.13.0"
terraswap = "2.4.0"
terra-cosmwasm = "2.2.0"

[dev-dependencies]
cosmwasm-schema =  "0.16.0"

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
          --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
              cosmwasm/rust-optimizer:0.12.5"""
optimize-w32 = """docker run --rm -v c:\\users\\ihols\\pfc\\openpeep\\terra-peep721:/code  \
            --mount type=volume,source=terra-peep_cache,target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
            cosmwasm/rust-optimizer:0.12.5"""
store = """terra-rust code store test-owner artifacts\\terra_peep721.wasm"""
instantiate = """terra-rust code instantiate test-owner artifacts\\terra_peep721.wasm .\\init.json --admin same"""
migrate = """terra-rust code migrate test-owner artifacts\\terra_peep721.wasm """
